Use :has selector to change cursor for nested rich text elements
Co-authored-by: krokodok <krokodok@git.wordpress.org>
Co-authored-by: velthy <stefanvelthuys@git.wordpress.org>
Co-authored-by: nuritnt <nuritnt@git.wordpress.org>
Co-authored-by: derpaschi <hubersen@git.wordpress.org>

--- a/packages/block-editor/src/components/block-list/content.scss
+++ b/packages/block-editor/src/components/block-list/content.scss
@@ -258,7 +258,8 @@ _::-webkit-full-page-media, _:future, :root .has-multi-selection .block-editor-b
 	&.is-selected {
 		cursor: default;
 
-		&.rich-text {
+		&.rich-text,
+		&:has(.rich-text) {
 			cursor: unset;
 		}
 	}
